Fixed: Mobile & Tablet spacing between site title and burger menu

--- a/site-sass/site-specific/site.header.scss
+++ b/site-sass/site-specific/site.header.scss
@@ -168,6 +168,9 @@
 
 	@include flex-direction(row);
 
+	@include mq($until:tablet) {
+		justify-content: space-between;
+	}
 
 
 
